--- a/practica.html
+++ b/practica.html
@@ -17,85 +17,89 @@
         </ul>
       </nav>
     </header>
-    <section>
-      <div>
-        <div class="row1">
-          <h2>Titulo de nuestra página</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione
-            at, adipisci totam laboriosam error eos porro debitis quam.
-            Distinctio, rem molestias? Doloribus minima saepe voluptatem rem vel
-            fuga optio vero, dolorem debitis quis accusamus minus facilis ipsam
-            doloremque! In, est. Lorem ipsum dolor sit amet, consectetur
-            adipisicing elit. Iusto quaerat maiores debitis voluptatem eaque
-            explicabo in iure quo doloremque illo earum laudantium, deserunt
-            inventore molestias aperiam officia voluptas velit quidem adipisci
-            assumenda fuga? Natus a veritatis illum ea totam, obcaecati
-            exercitationem at tempore sunt impedit magnam eveniet debitis dolore
-            iste. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Ratione at, adipisci totam laboriosam error eos porro debitis quam.
-            Distinctio, rem molestias? Doloribus minima saepe voluptatem rem vel
-            fuga optio vero, dolorem debitis quis accusamus minus facilis ipsam
-            doloremque! In, est. Lorem ipsum dolor sit amet, consectetur
-            adipisicing elit. Iusto quaerat maiores debitis voluptatem eaque
-            explicabo in iure quo doloremque illo earum laudantium, deserunt
-            inventore molestias aperiam officia voluptas velit quidem adipisci
-            assumenda
-          </p>
+    <main>
+      <section>
+        <div>
+          <div class="row1">
+            <h2>Titulo de nuestra página</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione
+              at, adipisci totam laboriosam error eos porro debitis quam.
+              Distinctio, rem molestias? Doloribus minima saepe voluptatem rem
+              vel fuga optio vero, dolorem debitis quis accusamus minus facilis
+              ipsam doloremque! In, est. Lorem ipsum dolor sit amet, consectetur
+              adipisicing elit. Iusto quaerat maiores debitis voluptatem eaque
+              explicabo in iure quo doloremque illo earum laudantium, deserunt
+              inventore molestias aperiam officia voluptas velit quidem adipisci
+              assumenda fuga? Natus a veritatis illum ea totam, obcaecati
+              exercitationem at tempore sunt impedit magnam eveniet debitis
+              dolore iste. Lorem ipsum dolor sit amet consectetur, adipisicing
+              elit. Ratione at, adipisci totam laboriosam error eos porro
+              debitis quam. Distinctio, rem molestias? Doloribus minima saepe
+              voluptatem rem vel fuga optio vero, dolorem debitis quis accusamus
+              minus facilis ipsam doloremque! In, est. Lorem ipsum dolor sit
+              amet, consectetur adipisicing elit. Iusto quaerat maiores debitis
+              voluptatem eaque explicabo in iure quo doloremque illo earum
+              laudantium, deserunt inventore molestias aperiam officia voluptas
+              velit quidem adipisci assumenda
+            </p>
+          </div>
+          <div class="row1">
+            <h2>Titulo de nuestra página</h2>
+
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione
+              at, adipisci totam laboriosam error eos porro debitis quam.
+              Distinctio, rem molestias? Doloribus minima saepe voluptatem rem
+              vel fuga optio vero, dolorem debitis quis accusamus minus facilis
+              ipsam doloremque! In, est. Lorem ipsum dolor sit amet, consectetur
+              adipisicing elit. Iusto quaerat maiores debitis voluptatem eaque
+              explicabo in iure quo doloremque illo earum laudantium, deserunt
+              inventore molestias aperiam officia voluptas velit quidem adipisci
+              assumenda fuga? Natus a veritatis illum ea totam, obcaecati
+              exercitationem at tempore sunt impedit magnam eveniet debitis
+              dolore iste. Lorem ipsum dolor sit amet consectetur, adipisicing
+              elit. Ratione at, adipisci totam laboriosam error eos porro
+              debitis quam. Distinctio, rem molestias? Doloribus minima saepe
+              voluptatem rem vel fuga optio vero, dolorem debitis quis accusamus
+              minus facilis ipsam doloremque! In, est. Lorem ipsum dolor sit
+              amet, consectetur adipisicing elit. Iusto quaerat maiores debitis
+              voluptatem eaque explicabo in iure quo doloremque illo earum
+              laudantium, deserunt inventore molestias aperiam officia voluptas
+              velit quidem adipisci assumenda
+            </p>
+          </div>
         </div>
-        <div class="row1">
-          <h2>Titulo de nuestra página</h2>
+
+        <div class="row2">
+          <h2>Sidebar</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus ut
+            esse necessitatibus molestias itaque deleniti neque est soluta
+            distinctio assumenda praesentium unde aliquid laboriosam
+            repellendus, impedit enim. Architecto, non quaerat. lorem100. Lorem
+            ipsum dolor sit amet, consectetur adipisicing elit. Natus ut esse
+            necessitatibus
+          </p>
 
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione
-            at, adipisci totam laboriosam error eos porro debitis quam.
-            Distinctio, rem molestias? Doloribus minima saepe voluptatem rem vel
-            fuga optio vero, dolorem debitis quis accusamus minus facilis ipsam
-            doloremque! In, est. Lorem ipsum dolor sit amet, consectetur
-            adipisicing elit. Iusto quaerat maiores debitis voluptatem eaque
-            explicabo in iure quo doloremque illo earum laudantium, deserunt
-            inventore molestias aperiam officia voluptas velit quidem adipisci
-            assumenda fuga? Natus a veritatis illum ea totam, obcaecati
-            exercitationem at tempore sunt impedit magnam eveniet debitis dolore
-            iste. Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-            Ratione at, adipisci totam laboriosam error eos porro debitis quam.
-            Distinctio, rem molestias? Doloribus minima saepe voluptatem rem vel
-            fuga optio vero, dolorem debitis quis accusamus minus facilis ipsam
-            doloremque! In, est. Lorem ipsum dolor sit amet, consectetur
-            adipisicing elit. Iusto quaerat maiores debitis voluptatem eaque
-            explicabo in iure quo doloremque illo earum laudantium, deserunt
-            inventore molestias aperiam officia voluptas velit quidem adipisci
-            assumenda
+            ipsum dolor sit amet consectetur adipisicing elit. Architecto,
+            distinctio, quibusdam, sapiente tempora asperiores animi tenetur
+            quasi ipsa dolor doloremque voluptas nihil! Nesciunt, inventore
+            maxime voluptatum enim alias cupiditate asperiores?
           </p>
+
+          molestias itaque deleniti neque est soluta distinctio assumenda
+          praesentium unde aliquid laboriosam repellendus, impedit enim.
+          Architecto, non quaerat. lorem100 Lorem ipsum dolor sit amet,
+          consectetur adipisicing elit. Natus ut esse necessitatibus molestias
+          itaque deleniti neque est soluta distinctio assumenda praesentium unde
+          aliquid laboriosam repellendus, impedit enim. Architecto, non quaerat.
+          lorem100
         </div>
-      </div>
-
-      <div class="row2">
-        <h2>Sidebar</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus ut
-          esse necessitatibus molestias itaque deleniti neque est soluta
-          distinctio assumenda praesentium unde aliquid laboriosam repellendus,
-          impedit enim. Architecto, non quaerat. lorem100. Lorem ipsum dolor sit
-          amet, consectetur adipisicing elit. Natus ut esse necessitatibus
-        </p>
-
-        <p>
-          ipsum dolor sit amet consectetur adipisicing elit. Architecto,
-          distinctio, quibusdam, sapiente tempora asperiores animi tenetur quasi
-          ipsa dolor doloremque voluptas nihil! Nesciunt, inventore maxime
-          voluptatum enim alias cupiditate asperiores?
-        </p>
-
-        molestias itaque deleniti neque est soluta distinctio assumenda
-        praesentium unde aliquid laboriosam repellendus, impedit enim.
-        Architecto, non quaerat. lorem100 Lorem ipsum dolor sit amet,
-        consectetur adipisicing elit. Natus ut esse necessitatibus molestias
-        itaque deleniti neque est soluta distinctio assumenda praesentium unde
-        aliquid laboriosam repellendus, impedit enim. Architecto, non quaerat.
-        lorem100
-      </div>
-    </section>
+      </section>
+    </main>
+    
     <footer>
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae ipsam
       ipsum repel
