añadiendo css a curriculum

--- a/index.html
+++ b/index.html
@@ -4,64 +4,67 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Curriculum</title>
   </head>
   <body>
-    <h1>Arturo Mejía</h1>
-    <h2>Web Developer</h2>
-
-    <hr />
-    <img
-      src="./assets/img/amejia-scaled.jpg"
-      alt="bio-photo"
-      width="300"
-      height="300"
-    />
-    <h3>About Me</h3>
-    <p>
-      Estudiante de Ingeniería de Sistemas, apasionado por el desarrollo web,
-      autodidacta, con conocimientos en lenguajes de programación como
-      JavaScript, TypeScript, Python. Manejo diferentes frameworks para el
-      desarrollo web para Frontend como el Backend.
-    </p>
-    <p>Address: <span>Km 12.7 Carretera Sur Managua</span></p>
-    <p>
-      Email: <span><a href="mailto:armejia02@gmail.com">armejia02@gmail.com</a></span>
-    </p>
-    <p>Phone: <span>+505 78853855</span></p>
-
-    <hr />
-    <h3>Technologys</h3>
-
-    <ul>
-      <li>JavaScript</li>
-      <li>TypeScript</li>
-      <li>NodeJs</li>
-      <li>React</li>
-      <li>NextJs</li>
-    </ul>
-
-    <h3>Experience</h3>
-    <!-- Make a CV -->
-    <ul>
-      <li>Frontend Developer</li>
-      <li>Backend Developer</li>
-      <li>Fullstack Developer</li>
-    </ul>
+    <main>
+      <div class="img-bio">
+        <img src="./assets/img/amejia-scaled.jpg" alt="bio-photo" />
+      </div>
+      <h1>Arturo Mejía</h1>
+      <h2>Web Developer</h2>
+    </main>
 
     <hr />
 
-    <h3>Education</h3>
-    <ul>
-      <li>Universidad Nacional de Ingeniería de Nicaragua</li>
-      <li>Colegio Calasanz</li>
-    </ul>
-    <hr />
+    <section class="section-1">
+      <div class="article">
+        <h3>About Me</h3>
+        <p class="bio-info">
+          Estudiante de Ingeniería de Sistemas, apasionado por el desarrollo
+          web, autodidacta, con conocimientos en lenguajes de programación como
+          JavaScript, TypeScript, Python. Manejo diferentes frameworks para el
+          desarrollo web para Frontend como el Backend.
+        </p>
+        <h3>Technologys</h3>
 
-    <h3>Courses</h3>
-    <ul>
-      <li>CS50x.ni</li>
-      <li>Web50x.ni</li>
-    </ul>
+        <ul>
+          <li>JavaScript</li>
+          <li>TypeScript</li>
+          <li>NodeJs</li>
+          <li>React</li>
+          <li>NextJs</li>
+        </ul>
+        <h3>Experience</h3>
+        <!-- Make a CV -->
+        <ul>
+          <li>Frontend Developer</li>
+          <li>Backend Developer</li>
+          <li>Fullstack Developer</li>
+        </ul>
+      </div>
+      <div class="article">
+        <p class="info">Address: <span>Km 12.7 Carretera Sur Managua</span></p>
+        <p class="info">
+          Email:
+          <span
+            ><a href="mailto:armejia02@gmail.com">armejia02@gmail.com</a></span
+          >
+        </p>
+        <p class="info">Phone: <span>+505 78853855</span></p>
+
+        <h3>Education</h3>
+        <ul>
+          <li>Universidad Nacional de Ingeniería de Nicaragua</li>
+          <li>Colegio Calasanz</li>
+        </ul>
+        <h3>Courses</h3>
+        <ul>
+          <li>CS50x.ni</li>
+          <li>Web50x.ni</li>
+        </ul>
+      </div>
+    </section>
   </body>
 </html>
