añadiendo un nuevo li

--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
 
         <h3>Education</h3>
         <ul>
-          <li>Universidad Nacional de Ingeniería de Nicaragua</li>
+          <li>Universidad Nacional de Ingeniería</li>
           <li>Colegio Calasanz</li>
+          <li>Lincoln</li>
         </ul>
         <h3>Courses</h3>
         <ul>
